# contracts/openapi/api.v1.yaml
@@ -242,6 +242,20 @@ paths:
           description: Internal Server Error
       tags:
         - Auth
+  /api/auth/logout:
+    post:
+      operationId: LogoutUser
+      responses:
+        "204":
+          description: No Content
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+          description: Unauthorized
+      tags:
+        - Auth
   /api/health:
     get:
       operationId: GetApiHealth
